--- a/src/main/resources/com/company/jmixpmflowbase/messages_en.properties
+++ b/src/main/resources/com/company/jmixpmflowbase/messages_en.properties
@@ -14,11 +14,15 @@ com.company.jmixpmflowbase.entity/ProjectStatus.IN_PROGRESS=In progress
 com.company.jmixpmflowbase.entity/ProjectStatus.NEW=New
 com.company.jmixpmflowbase.entity/Task=Task
 com.company.jmixpmflowbase.entity/Task.assignee=Assignee
+com.company.jmixpmflowbase.entity/Task.attachment=Attachment
+com.company.jmixpmflowbase.entity/Task.completed=Completed
+com.company.jmixpmflowbase.entity/Task.dueDate=Due date
 com.company.jmixpmflowbase.entity/Task.estimatedEfforts=Estimated efforts
 com.company.jmixpmflowbase.entity/Task.id=Id
 com.company.jmixpmflowbase.entity/Task.name=Name
 com.company.jmixpmflowbase.entity/Task.project=Project
 com.company.jmixpmflowbase.entity/Task.startDate=Start date
+com.company.jmixpmflowbase.entity/Task.timeEntries=Time entries
 com.company.jmixpmflowbase.entity/TimeEntry=Time entry
 com.company.jmixpmflowbase.entity/TimeEntry.description=Description
 com.company.jmixpmflowbase.entity/TimeEntry.entryDate=Entry date
@@ -59,6 +63,8 @@ com.company.jmixpmflowbase.view.user/UserListView.title=Users
 com.company.jmixpmflowbase.view.project/projectDetailView.title=Project
 com.company.jmixpmflowbase.view.project/projectListView.title=Projects
 
+com.company.jmixpmflowbase.view.task/checkOverdueTasks=Check overdue tasks
+com.company.jmixpmflowbase.view.task/notifyAssignee.text=Notify assignee
 com.company.jmixpmflowbase.view.task/taskDetailView.title=Task
 com.company.jmixpmflowbase.view.task/taskListView.title=Tasks
 
